# StealthyBrowserIguess

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
api/: browser.go  go.mod  go.sum  handlers.go  main.go  routes.go
stealth_browser/: cli.py
stealth_browser/patches/: stealth-hardware-patches.js
stealthy_browser/: __init__.py  client.py  config.json  server.py
stealthy_browser/patches/: stealth-fingerprint-patches.js  stealth-patches.js  stealth-ultimate-patches.js  stealth-webrtc-patches.js
